--- a/work/diplom.tex
+++ b/work/diplom.tex
@@ -719,9 +719,9 @@ Accepts \textit{LingMap} objects and creates map of them.
 
 It is impossible to add, for example, features and minicharts. If you need it, you can create two \textit{LingMap} objects and then use the \textit{merge} function.
 
-\textbf{Parameter} *maps: \textit{LingMap} objects.
+\textbf{Parameter} *maps: \textit{lingtypology.maps.LingMap} objects.
 
-\textbf{Returns} foilum.Map
+\textbf{Returns} lingtypology.maps.LingMap
 \medskip
 
 \textit{function} lingtypology.\textbf{get\_elevations} \textit{(languages)}
