--- a/work/mybiblio.bib
+++ b/work/mybiblio.bib
@@ -487,7 +487,8 @@
     note = {An edited version of a seminar given as part of
             the Weatherburn Lecture Series for the
             Department of Mathematics and Statistics,
-            at the University of Western Australia}
+            at the University of Western Australia},
+    url = {http://www.mvstat.net/tduong/research/seminars/seminar-2001-05/}
 }
 
 @article {Blasieaav3218,
